# thorium

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: critical-issue.md  possible-issue.md  proposal.md
src/: cli.rs  logging.rs  main.rs  printer.rs
src/commands/: mod.rs  project.rs  toolchain.rs
